--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Moscow Heatmap</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src='./assets/yandex/ymaps.js'></script>
     <script src='./assets/yandex/heatmap.js'></script>
     <script src='./assets/main.js'></script>
@@ -23,6 +26,15 @@
         #map {
             width: 100vw;
             height: 100vh
+        }
+
+        .delete-btn {
+            cursor: pointer;
+        }
+
+        .layer {
+            display: flex;
+            justify-content: space-between;
         }
     </style>
 </head>
